tests/lifetime_inference/lifetime_alloc_infer_error.june
// error: is not an allocator

struct Stats {
    age: i64
}

struct noalloc Employee {
    name: c_string,
    stats: Stats,
}

fun helper(mut employee: Employee) {
    employee.stats = new Stats(age: 33)
}

fun main() {
    mut employee = new Employee(name: c"Sophia", stats: new Stats(age: 22))

    helper(employee)

    println(employee.stats.age)
}